--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     </div>
     <div class="luxury">
         <div class="gallery">
-            <img src="image1.jpg" alt="Image 1">
-            <img src="image2.jpg" alt="Image 2">
-            <img src="image3.jpg" alt="Image 3">
-            <img src="image4.jpg" alt="Image 4">
+            <img src="img/luxury/luxury.jpeg" alt="Image 1">
+            <img src="img/luxury/luxury2.jpeg" alt="Image 2">
+            <img src="img/luxury/Designer (1).jpeg" alt="Image 3">
+            <img src="img/luxury/Designer (2).jpeg" alt="Image 4">
         </div>
         <div class="info">
             <h2>Luxury Hotel</h2>
@@ -70,10 +70,10 @@
             <button>Reserve Now</button>
         </div>
         <div class="gallery">
-            <img src="seaside1.jpg" alt="Seaside Image 1">
-            <img src="seaside2.jpg" alt="Seaside Image 2">
-            <img src="seaside3.jpg" alt="Seaside Image 3">
-            <img src="seaside4.jpg" alt="Seaside Image 4">
+            <img src="img/luxury/luxury.jpeg" alt="Image 1">
+            <img src="img/luxury/luxury2.jpeg" alt="Image 2">
+            <img src="img/luxury/Designer (1).jpeg" alt="Image 3">
+            <img src="img/luxury/Designer (2).jpeg" alt="Image 4">
         </div>
     </div>
     
